# wq.create

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  __init__.py  forms.py  projects.py  pyproject.toml  runtests.sh  setup.py  version.py
.github/workflows/: test.yml
tests/: .gitignore  json-compare.py  location.csv  observation.csv  test-deploy-dev.sh  test-deploy-prod.sh  test-deploy.sh
tests/expected/: config0.json  config1.json  config2.json  config3.json  locations1.json  observations1.json
tests/expected-postgis/: config0.json  config1.json  config2.json  config3.json  locations2.geojson  observations1.json
wq/create/: forms.py  projects.py  version.py
